# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md
src/: display.c  display.h  main.c
